--- a/index.html
+++ b/index.html
@@ -27,10 +27,26 @@
     </section>
 
     <div class="container">
-      <div class="autocomplete1"></div>
 
+      <div class = "columns">
+        <div class = "column">
+          <div id = "left-autocomplete"></div>
+          <div id = "left-summary"></div>
+        </div>
+        <div class = "column">
+           <div id = "right-autocomplete"></div>
+           <div id = "right-summary"></div>
+        </div>
+      </div>
+
+        <div class = "column is-half notification is-primary tutorial">
+           <h1 class="title">Search for a movie on both sides</h1>
+           <p class = "subtitle">We will tell you which is best</p>
+        </div>
+    </div>
       <div id="summary"></div>
     </div>
+
     <script src="utils.js"></script>
      <script src="autocomplete.js"></script>
    <script src="index.js"></script>
